--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script>
+// Initialize Parse
+  Parse.initialize("KAykbEofDqGaVmaCHNT4oA2o7p5ZyZ0YJUblB7qa", "VeKmLaRMvXdXRKe3b6tGddtlob2i4rYB65NSaA4z"); //PASTE HERE YOUR Back4App APPLICATION ID AND YOUR JavaScript KEY
+  Parse.serverURL = "https://parseapi.back4app.com/";
+</script>
+
+  
 </body>
 
 </html>
